--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
               <a href="{% url 'adduser' %}" class="nav-link">
                 <i class="nav-icon fas fa-users"></i>
                 <p>
-                  Member of Staff
+                Add Students
                  
                 </p>
                 
@@ -108,12 +108,21 @@
                 </p>
               </a>
             </li>
-            <li class="nav-item">
+              <li class="nav-item">
               {% comment %} {% url 'invoice-list' %} {% endcomment %}
-              <a href="#" class="nav-link">
+              <a href="{% url 'rPlacement' %}" class="nav-link">
                 <i class="nav-icon fas fa-money-bill-alt"></i>
                 <p>
-                  Manage Students
+                  Reset Placement
+                </p>
+              </a>
+            </li>
+            <li class="nav-item">
+              {% comment %} {% url 'invoice-list' %} {% endcomment %}
+              <a href="{% url 'managePlacement' %}" class="nav-link">
+                <i class="nav-icon fas fa-money-bill-alt"></i>
+                <p>
+                  Manage Placed Students
                 </p>
               </a>
             </li>
