--- a/StudentDean/templates/StudentDean/add_dorm.html
+++ b/StudentDean/templates/StudentDean/add_dorm.html
@@ -25,7 +25,7 @@
     </div>
  {% endfor %}
 {% endif %}
- 
+<center><h1>Add Dorm</h1></center>  
  <form action='add_dorm1' method='POST' outtocomplete='off'>
     {% csrf_token %}
     {% render_form serializer %}
