--- a/StudentDean/templates/StudentDean/addblock.html
+++ b/StudentDean/templates/StudentDean/addblock.html
@@ -25,7 +25,7 @@
     </div>
  {% endfor %}
 {% endif %}
- 
+<center><h1>Add Block</h1></center> 
 
 <form action="blockadd1" method="POST">
   {% csrf_token %}
