--- a/StudentDean/templates/StudentDean/uploadstudent.html
+++ b/StudentDean/templates/StudentDean/uploadstudent.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
-
+{% block title %}
+  Student Placement
+{% endblock title %}
 
 {% block content %}
+
 
 
   <form method="POST" enctype="multipart/form-data">
