--- a/account/templates/account/updaterole.html
+++ b/account/templates/account/updaterole.html
@@ -1,4 +1,4 @@
-{% extends "Sdeanindex.html"%}
+{% extends 'account/base.html' %}
 {% load crispy_forms_tags%}
 <!DOCTYPE html>
 <html lang="en">
@@ -10,11 +10,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-  <title>Add Block</title>
+  <title>Update Role</title>
 </head>
-  {% block title %}
-  Student Update Information
-{% endblock title %}
 <body>
   {% load crispy_forms_tags %}  
     {% block content%}
@@ -28,12 +25,15 @@
        </div>
     {% endfor %}
    {% endif %}
+   <h1>Grant Role</h1>
     <form action="#" method="POST">
-      
-     {% csrf_token %}
-     {{form|crispy}}
-     
-    
+        {% csrf_token %}
+        <label for="">Username</label>
+        <input type="text" class="form-control" {{form.username}}
+       <br>
+       <label for="">Role</label><br>
+        {{form.Role}} <br>
+        <br>
      <button type="submit" class="btn btn-primary">Update</button>
    </form>
    {% endblock content%}
