--- a/StudentDean/templates/StudentDean/viewPlacementInfo.html
+++ b/StudentDean/templates/StudentDean/viewPlacementInfo.html
@@ -25,6 +25,7 @@
             <th scope="col">Gender</th>
             <th scope="col">Collage</th>
             <th scope="col">Department</th>
+            <th scope="col">batch</th>
             <th scope="col">Block</th>
             <th scope="col">Room</th>
         </tr>
@@ -38,6 +39,7 @@
         <td>{{result.gender}}</td>
         <td>{{result.collage}}</td>
         <td>{{result.department}}</td>
+        <td>{{result.batch}}</td>
         <td>{{result.block}}</td>
         <td>{{result.room}}</td>
         <td>
