--- a/StudentDean/templates/StudentDean/viewdorm.html
+++ b/StudentDean/templates/StudentDean/viewdorm.html
@@ -11,16 +11,14 @@
  
   <title>Add Block</title>
 </head>
-  {% block title %}
-  Dorm Information
-{% endblock title %}
 <body>
-    
     {% block breadcrumb %}
     <a class="btn btn-primary" href="{% url 'add_dorm' %}">
         <i class="fas fa-bars"></i>  Add Dorm</a>
     {% endblock breadcrumb %}
-    
+    {% block title %}
+  <h1>View Dorm</h1>
+{% endblock title %}
  {% block content%}
  <table id="Dorm" class="table table-hover">
     <thead>
