--- a/StudentDean/templates/StudentDean/add_dorm.html
+++ b/StudentDean/templates/StudentDean/add_dorm.html
@@ -13,22 +13,21 @@
   <title>Add Block</title>
 </head>
 <body>
-
- {% block content%}
- {% if messages %}
+  {% if messages %}
   {% for message in messages %}
-    <div class="alert alert-dismissible alert-success">
-      <button type="button" class="close" data-dismiss="alert">
-      ×
-      </button>
-      <strong>{{message}}</strong>
-    </div>
+     {{message}}
  {% endfor %}
 {% endif %}
-<center><h1>Add Dorm</h1></center>  
- <form action='add_dorm1' method='POST' outtocomplete='off'>
+ 
+  {% block title %}
+<h1>Register Dorm</h1>
+{% endblock title %}
+ {% block content%}
+ 
+ <br>
+ <form  method='POST' outtocomplete='off'>
     {% csrf_token %}
-    {% render_form serializer %}
+    {{form|crispy}}
   <button type="submit" class="btn btn-primary">Submit</button>
  </form>
 
