--- a/StudentDean/templates/StudentDean/addblock.html
+++ b/StudentDean/templates/StudentDean/addblock.html
@@ -14,22 +14,20 @@
   <title>Add Block</title>
 </head>
 <body>
- {% block content%}
- {% if messages %}
+  {% if messages %}
   {% for message in messages %}
-    <div class="alert alert-dismissible alert-success">
-      <button type="button" class="close" data-dismiss="alert">
-      ×
-      </button>
-      <strong>{{message}}</strong>
-    </div>
+     {{message}}
  {% endfor %}
 {% endif %}
-<center><h1>Add Block</h1></center> 
+  {% block title %}
+<h1>Register Block</h1>
+{% endblock title %}
+ {% block content%}
+ 
 
-<form action="blockadd1" method="POST">
+<form  method="POST">
   {% csrf_token %}
-  {% render_form serializer %}
+  {{form|crispy}}
   <input type="submit" class="btn-primary" value="Submit">
 </form>
  {% endblock content%}
