--- a/StudentDean/templates/StudentDean/viewPlacementInfo.html
+++ b/StudentDean/templates/StudentDean/viewPlacementInfo.html
@@ -9,13 +9,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-  <title>Add Block</title>
+  <title></title>
 </head>
 <body>
+  {% block breadcrumb %}
+  <form action="{% url 'managePlacement' %}" class="d-flex" method="POST">
+    {% csrf_token %}
+    <input type="search" placeholder="Search User" name="searched">
+    <button class="btn btn-outline-primary" type="submit"> Search</button>
+  </form>
+  {% endblock breadcrumb %}
+
   {% block title %}
-  Student Placement Information
+<h1>Placement Information</h1>
 {% endblock title %}
  {% block content%}
+ <a href="#"><button type="menu" class="btn btn-primary"> Dowload PDF</button></a>
  <table id="block" class="table table-hover">
     <thead>
         <tr>  
@@ -23,9 +32,10 @@
             <th scope="col">First name</th>
             <th scope="col">Last name</th>
             <th scope="col">Gender</th>
+            <th scope="col">Stream</th>
             <th scope="col">Collage</th>
             <th scope="col">Department</th>
-            <th scope="col">batch</th>
+            <th scope="col">Batch</th>
             <th scope="col">Block</th>
             <th scope="col">Room</th>
         </tr>
@@ -33,10 +43,11 @@
     <tbody>
         {% for result in Placement %}
     <tr>
-        <th scope="row"><a href="{% url 'managePlacement' %}"> {{result.Stud_id}} </a></th>
+        <th scope="row"> {{result.Stud_id}}</th>
         <td>{{result.FirstName}}</td>
         <td>{{result.LastName}}</td>
         <td>{{result.gender}}</td>
+        <td>{{result.stream}}</td>
         <td>{{result.collage}}</td>
         <td>{{result.department}}</td>
         <td>{{result.batch}}</td>
