--- a/StudentDean/templates/StudentDean/viewblock.html
+++ b/StudentDean/templates/StudentDean/viewblock.html
@@ -11,12 +11,10 @@
 
   <title>Add Block</title>
 </head>
-  {% block title %}
-  Block Information
-{% endblock title %}
- 
 <body>
-
+{% block title %}
+  <h1>View Dormitory Information</h1>
+{% endblock title %}
  {% block content%}
  <table id="block" class="table table-hover">
     <thead>
@@ -24,7 +22,6 @@
             <th scope="col">Block_name</th>
             <th scope="col">Block Type</th>
             <th scope="col">Block Purpose</th>
-             <th scope="col">Block Status</th>
         </tr>
     </thead>
     <tbody>
@@ -33,7 +30,6 @@
         <th scope="row"><a href="{% url 'viewdorm' result.id %}"> {{result.Block_name}} </a></th>
         <td>{{result.Block_type}}</td>
         <td>{{result.Block_purpose}}</td>
-        <td>{{result.Status}}</td>
         <td>
             <a class="btn btn-success"  href="{% url 'updateblock' result.id %}" role="button">Edit</a>
             <a class="btn btn-danger" href="{% url 'delateblock' result.id %}" role="button" onclick="return confirm('Are you sure you want to delete?')">Remove</a>
