--- a/templates/base.html
+++ b/templates/base.html
@@ -49,11 +49,11 @@
           </a>
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
             <a href="#" class="dropdown-item">
-              <i class="fas fa-user mr-2"></i> Profile
+              <i class="fas fa-user mr-2"></i> {{request.session.username}}
             </a>
             <div class="dropdown-divider"></div>
             {% comment %} {% url 'logout' %} {% endcomment %}
-            <a href="#" class="dropdown-item">
+            <a href="{% url 'logout' %}" class="dropdown-item">
               <i class="fas fa-sign-out"></i> Sign out
             </a>
           </div>
